# Swarm_Robots_Visual_Systems

./: License  RGBmain.c  Report  Report.tex
MainControl/: MainControl.py  MainControl.py.save  RobotMain  RobotMain.py  RobotMain_build.py  RobotMain_newlibrary.py  _encodercontrol_cffi.c  angleTest.py  angleToIntercept.py  encodercontrol_export.c  encodercontrol_export.h  left_motor_output.csv  lightMain.py  right_motor_output.csv
RGB/: RGBTest.py  colorCheck.py  command.py  toHue.js
RGB/RGB/: colorCheck.py
Report/: Report.tex
SerialTest/: comsTest.py  sendTest  sendTest.cpp  sendTest.cpp.save  uart_test.py
beaglebone lib/: README.md  libopencv_core.so.4.6.0  libopencv_highgui.so.406  libopencv_imgcodecs.so.406  libopencv_imgproc.so.406
beaglebone lib/pkgconfig/: jasper.pc
camera/: .square_detect.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  bonecv  bonecv.cpp  camtest.py  cmake_install.cmake  frametest.cpp  in_VID5.xml  out_camera_data.xml  pose_from_homography  pose_from_homography.cpp.save.1  square_detect  square_detect.cpp  squares_test  squares_test.cpp  usbcamera_test  videocapture_basic  videocapture_basic.cpp  videocapture_camera.cpp
camera/opencv/: CMakeCache.txt  CMakeLists.txt
control_test/: SWARMROBOTICS  encodercontrol.c
finalpres/: .newfinalpres.c.swo  Makefile  encodercontrol.c  expb.c  newfinalpres  pub  sensor_IR.c  sensor_IR.h  udp.c
irsensor/: sensor_IR.c  sensor_IR.h
opencv usr local bin/: apriltag_demo  imgcmp  imginfo  jasper  newfinalpres  opencv_annotation  opencv_demo  opencv_version  opencv_visualisation  pyctrl_start_server  pyctrl_stop_server  setup_vars_opencv4.sh
src/: encodercontrol.c  rc_test_adc.c
(+54 files in other folders)
